# muesli-model-service

./: CHANGELOG.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  examples.md  minivla.md  muesli-bt-bridge.md  protocol.md  release.md  roadmap.md  smolvla.md  user-manual.md
docs/schemas/: mmsp-v0.2-capability-snapshots.json
examples/: invoke_score.py  session_action_chunk.py  smolvla_action_chunk.py  ws_client.py
src/muesli_model_service/: __main__.py  app.py  cli.py  config.py  logging.py
src/muesli_model_service/backends/: __init__.py  base.py  minivla.py  mock.py  replay.py  smolvla.py
src/muesli_model_service/protocol/: __init__.py  actions.py  capabilities.py  envelope.py  errors.py  messages.py  refs.py  statuses.py  validation.py
src/muesli_model_service/runtime/: __init__.py  deadlines.py  dispatcher.py  registry.py  sessions.py
src/muesli_model_service/store/: artifacts.py  frames.py
src/muesli_model_service/transports/: http.py  websocket.py
tests/: conftest.py  test_frame_ingest.py  test_minivla_backend.py  test_minivla_gpu.py  test_mock_backend.py  test_protocol_schema.py  test_registry.py  test_replay_backend.py  test_schema_snapshots.py  test_sessions.py  test_smolvla_backend.py  test_smolvla_gpu.py  test_websocket_transport.py
tools/: minivla_prismatic_worker.py
