[project]
name = "muesli-model-service"
version = "0.2.0"
description = "External model-backed capability service for muesli-bt"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "UNSWEI" }
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "orjson>=3.10",
  "typer>=0.12",
  "rich>=13.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "websockets>=12.0",
  "httpx>=0.27",
  "ruff>=0.6",
  "pyright>=1.1"
]
smolvla = [
  "lerobot[smolvla]==0.5.1"
]
minivla = [
  "torch>=2.2",
  "torchvision>=0.17",
  "transformers>=4.48",
  "timm>=1.0",
  "tokenizers>=0.20",
  "Pillow>=10",
  "accelerate>=0.30"
]

[project.scripts]
muesli-model-service = "muesli_model_service.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "smolvla_gpu: requires LeRobot SmolVLA dependencies and a GPU",
  "minivla_gpu: requires MiniVLA dependencies and a GPU"
]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
